layout problems fixed

--- a/src/yams.css
+++ b/src/yams.css
@@ -1,9 +1,29 @@
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #main-grille {
   display: flex;
   border: 1px solid #0069D9;
   border-radius: 10px;
   padding: 8px;
-  padding-bottom: 4px
+  padding-bottom: 4px;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+#header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #6495ED;
+  border-radius: 10px;
+  padding: 10px;
+  min-height: 55px;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 #dice-zone {
@@ -14,13 +34,20 @@
   border-radius: 10px;
   padding: 2px;
   min-height: 60px;
-  margin-bottom: 5px
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
-.bottom-part {
+#buttons-zone {
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
+  border: 1px solid #0069D9;
+  border-radius: 10px;
+  padding: 2px;
+  min-height: 60px;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .h-player {
